--- a/index.html
+++ b/index.html
@@ -6,12 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flappy Bird</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Vina+Sans&display=swap');
+    </style>
+
     <link rel="stylesheet" href="./css/stylesheet.css">
 </head>
 
 <body>
 
-    <canvas id="myCanvas"></canvas>
+    <canvas class="myCanvas" id="myCanvas"></canvas>
+    <div class="container">
+        <h1>Flappy Hacker</h1>
+        <h2>Press SPACE to Start game</h2>
+        <footer>
+            <p>Creado por Manuel y Sergio</p>
+        </footer>
+    </div>
 
     <script src="src/powerup.js"></script>
     <script src="src/pipeline.js"></script>
