--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
         </footer>
     </div>
 
-    <script src="src/powerup.js"></script>
-    <script src="src/pipeline.js"></script>
-    <script src="src/bird.js"></script>
+
     <script src="src/background.js"></script>
+    <script src="src/bird.js"></script>
+    <script src="src/pipeline.js"></script>
+    <script src="src/powerup.js"></script>
+    <script src="src/powerdown.js"></script>
     <script src="src/game.js"></script>
     <script src="src/index.js"></script>
 
