fixing counter  problems with different widths

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <div class="container">
         <h1>Flappy Hacker</h1>
         <h2>Press SPACE to Start game</h2>
+        <div>
+            <h1> Score </h1>
+            <h1 id="score"> 0 </h1>
+        </div>
         <footer>
             <p>Creado por Manuel y Sergio</p>
         </footer>
