improving not canvas area

--- a/index.html
+++ b/index.html
@@ -31,16 +31,14 @@
         <div class="no-score hidden">
             <h3>Vaya! no as superado ningun record merluzo!</h3>
         </div>
-        <div id="form-container" class="hidden">
-            <form class=" new-score-cont">
-                <p>Conseguiste un nuevo record de
-                    <a id="record"></a> puntos introduce tu nick para entrar al muro de la fama
-                </p>
-                <input id="input" placeholder="Nombre" type="text">
-                <a onclick="sendForm()" href="#">
-                    <p class="btn">Enviar</p>
-                </a>
-            </form>
+        <div id="form-container" class="">
+
+
+
+            <a id="btn" class="hidden2" onclick="location.reload()" href="#">
+                <p class="btn">Play Again</p>
+            </a>
+
 
         </div>
         <div class="hidden rank-container">
