adding crash sound

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <audio id="sound" autoplay>
         <source src="./sounds/cumbia.mp3" type="audio/mpeg">
     </audio>
+    <audio id="sound-crash" autoplay>
+        <source src="./sounds/crash.mp3" type="audio/mpeg">
+    </audio>
 
     <canvas class="myCanvas" id="myCanvas"></canvas>
 
