--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flappy Bird</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
-
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Vina+Sans&display=swap');
     </style>
     <link rel="stylesheet" href="./css/stylesheet.css">
 </head>
 
+
 <body>
+
     <audio id="sound" autoplay>
         <source src="./sounds/cumbia.mp3" type="audio/mpeg">
     </audio>
@@ -27,31 +28,20 @@
     <div class="container">
         <h1>Flappy Hacker</h1>
         <h2 class="press-space">Press SPACE to Start game</h2>
+
         <div id="score-container" class="score-container hidden ">
             <h3>Score</h3>
             <p class="score" id="score">0</p>
         </div>
-        <div class="no-score hidden">
-            <h3>Vaya! no as superado ningun record merluzo!</h3>
-        </div>
+
         <div id="form-container" class="">
-
-
-
             <a id="btn" class="hidden2" onclick="location.reload()" href="#">
                 <p class="btn">Play Again</p>
             </a>
-
-
         </div>
-        <div class="hidden rank-container">
-            <h3>Lista de ranking</h3>
-            <ul class="list">
 
-            </ul>
-        </div>
         <footer>
-            <p>Creado por Manuel y Sergio</p>
+            <p>Created by Manuel & Sergio</p>
         </footer>
     </div>
 
